# heurist_to_tei

./: .gitignore  README.md  pyproject.toml
heurist/: general.py
src/heurist/: __init__.py  lostma_tables.py
src/tei/: mapping_witness.yaml
src/tei/builders/: text_builder.py  witness_builder.py
src/tei/mapping/: mapping_text.yaml  mapping_witness.yaml
src/tei/schemas/: witness.odd  witness.rng
