[project]
name = "heurist-analyser"
version = "0.1.0"
description = "Transformation pipeline from Heurist database to TEI depot."
authors = [
    {name = "Maud Mélinand"}
]
license = {text = "CC-BY-SA-4.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "heurist-api @ git+https://github.com/LostMa-ERC/heurist-api.git",
    "duckdb (>=1.4.1,<2.0.0)",
    "ipython (<=7.34.0)",
    "pandas>=3",
    "rich>=14",
    "lxml>=6.1,<7",
    "PyYAML>=6.0,<7"
]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]